*Empty MediaWiki Message*

--- a/Эрзянь_кулялопань_ды_журналонь_лув.mw
+++ b/Эрзянь_кулялопань_ды_журналонь_лув.mw
@@ -14,13 +14,13 @@
 == Ташто кулялопат ==
 * [[«Вейсэнь эрямо» (кулялопа)]] (Арзамас)
 * [[«Вейсэнь эрямо» (кулялопа)]] (Лугоян ош)
-* [[«Комсомолонь вайгель» (кулялопа)]]
+* [[«Комсомолонь вайгель» (кулялопа)]] (1936—1941)<ref name="РГБ"/>
 * [[«Ленинэнь кадрань кис» (кулялопа)]]
-* [[«Ленинэнь киява» (кулялопа)]] (Саран ош)
+* [[«Ленинэнь киява» (кулялопа)]] (Саран ош) (1935—1941)<ref name="РГБ">[http://ifund.rsl.ru/participants/libraries/natsyonalnaya-biblioteka-mordovii Российская Государственная Библиотека: Национальная библиотека им. А. С. Пушкина Республики Мордовия{{Ref-ru}}]</ref>
 * [[«Ленинэнь киява» (кулялопа)]] (Клявлянь буе Самарань ёнкссо)
 * [[«Ленинэнь киява» (кулялопа)]] (Средне-Волжский комсомолец Мордовиясо 12.3.1934)
 * [[«Мордовиянь комсомолец» (кулялопа)]] (ВЛКСМ-нь Мордовской обкомонть ды Саранск ошонь комитетэнть газетаст, ды {{Lang-mdf| ''ВЛКСМ-нь Мордовскяй обкомть и Саранскяйнь горкомть газетасна''}})
-* [[«Якстере теште» (кулялопа)]]
+* [[«Якстере теште» (кулялопа)]]  («Эрьзян правда»)  (1935—2016)<ref name="РГБ"/>
 
 == Ташто журналт ==
 * [[«Изнямо» (альманах)]] (лиснесь [[якшамков]]онь [[1946 ие]]сте [[панжиков]]онь [[1956 ие]]с  «Сятко» ковставксонть таркас)
