*Empty MediaWiki Message*

--- a/Эрзянь_кулялопань_ды_журналонь_лув.mw
+++ b/Эрзянь_кулялопань_ды_журналонь_лув.mw
@@ -12,22 +12,52 @@
 * [[«Ратор» (журнал)]]
 
 == Ташто кулялопат ==
-* [[«Вейсэнь эрямо» (кулялопа)]] (Арзамас)
-* [[«Вейсэнь эрямо» (кулялопа)]] (Лугоян ош)
-* [[«Комсомолонь вайгель» (кулялопа)]] (1936—1941)<ref name="РГБ"/>
-* [[«Ленинэнь кадрань кис» (кулялопа)]]
-* [[«Ленинэнь киява» (кулялопа)]] (Саран ош) (1935—1941)<ref name="РГБ">[http://ifund.rsl.ru/participants/libraries/natsyonalnaya-biblioteka-mordovii Российская Государственная Библиотека: Национальная библиотека им. А. С. Пушкина Республики Мордовия{{Ref-ru}}]</ref>
-* [[«Ленинэнь киява» (кулялопа)]] (Клявлянь буе Самарань ёнкссо)
-* [[«Ленинэнь киява» (кулялопа)]] (Средне-Волжский комсомолец Мордовиясо 12.3.1934)
+* [[«Большевик» (кулялопа)|«Большевик»]]<ref name="ЛГ">[http://old.lgz.ru/article/20698/ Литературная газета АНО «Национальный библиотечный ресурс» объявляет о розыске{{Ref-ru}}]</ref> ([[Орданьбуе (ош, Орданьбуе)|Орданьбуе ош]]) (1932 — 1937) ВКП(б)-нь Ардатовань райкомонть дый райисполкомонть газетаст. 
+* [[«Васень маень лопа» (кулялопа)|«Васень маень лопа»]]<ref name="ЛГ"/> (1925 г. 1/V) Газетанть нолдыцязо Главполитпросветэнь Всероссийской Чрезвычайной комиссии по ликвидации неграмотности.
+* [[«Вейсэнь эрямо» (кулялопа, Арзамас)|«Вейсэнь эрямо»]] (Арзамас) (1930 — 1935)
+* [[«Вейсэнь эрямо» (кулялопа, Лугоян)|«Вейсэнь эрямо»]] (Лугоян ош)
+* [[«Дозорник. «Ленинэнь киява» (кулялопа)|«Дозорник. «Ленинэнь киява»]] ([[Саран ош]]) (1932) «Эрзянь комуна» ды «Кр. Мордовия» газетатнень выездной редакцияст комсомолонь покш урожаень дозорникнень слетсо. 
+* [[«Кепедсынек кавксть урожаенть» (кулялопа)|«Кепедсынек кавксть урожаенть»]]<ref name="ЛГ"/> ЦК ВКП (б) эрзя-мокшонь секциянть стенгазета. Нолдазь тундонь сюро-видема шканень. Лисць мартонь 20-це чистэ 1929 иестэ.
+* [[«Комсомолонь вайгель» (кулялопа)|«Комсомолонь вайгель»]] (1936 — 1941)<ref name="РГБ"/>
+* [[«Колхозьникинь вальгий» (кулялопа)|«Колхозьникинь вальгий»]]<ref name="ЛГ"/> ([[Теньгжвеле (Теньгушбуе)|Теньгжвеле]]) [шокшань кельсэ]. Теньгушевань РК ВКП(б)-нь Райсполкомонь ды Райпрофсоветэнь газетась. (1932 — 1933) 
+* [[«Колхозонь ки» (кулялопа)|«Колхозонь ки»]]<ref name="ЛГ"/> ([[Чополт ош]]) [Колхозный путь] [шокш]. Газета Темниковань райкомонь ВКП(б)-нь, Райисполкомонь ды Райпроф­советэнь 1933 и. 
+* [[«Ленинэнь кадрань кис» (кулялопа)|«Ленинэнь кадрань кис»]]<ref name="ЛГ"/> ([[Саран ош]]) (1936) ВКСХШ-нь ректоратонть, ВКП(б)-нь парткомонть ды профкомонть газеткаст.
+* [[«Ленинэнь киява» (кулялопа, Клявля)|«Ленинэнь киява»]]<ref name="ЛГ"/> ([[Клявля]], Самарань ёнкссо) (1937 — 1941 ) ВКП(б)-нь Клявлинань райкомонть ды трудицять депутатнэнь районной советнэнь газестаст.
+* [[«Ленинэнь киява» (кулялопа, Козловка)|«Ленинэнь киява»]]<ref name="ЛГ"/> ([[Козловка (Отяжбуе)|Козловка]])  ВКП(б)-нь Козловской райкомонть ды райисполкомонть газетаст. с. Козловка, 1937-1945
+* [[«Ленинэнь киява» (кулялопа, Саран ош)|«Ленинэнь киява»]]<ref name="ЛГ"/> ([[Саран ош]]) (1931-1941), (1935 — 1941)<ref name="РГБ">[http://ifund.rsl.ru/participants/libraries/natsyonalnaya-biblioteka-mordovii Российская Государственная Библиотека: Национальная библиотека им. А. С. Пушкина Республики Мордовия{{Ref-ru}}]</ref> (Средне-Волжский комсомолец Мордовиясо 12.3.1934) ВЛКСМ-нь Мордовской обкомонть ды Саранск ошонь комитетэнть газетаст.
+* «Мокшэрзянь сёрмадыця». «Мокшэрзянь писатель». (1934 27/ VII.) МАО-нь советской сермадыцянб Союзонь оргомитетэнть ве чинь газетась. 
 * [[«Мордовиянь комсомолец» (кулялопа)]] (ВЛКСМ-нь Мордовской обкомонть ды Саранск ошонь комитетэнть газетаст, ды {{Lang-mdf| ''ВЛКСМ-нь Мордовскяй обкомть и Саранскяйнь горкомть газетасна''}})
+* [[«Од велень кис!» (кулялопа)|«Од велень кис!»]]<ref name="ЛГ"/> ([[Самар ош]]) (1929)  Стенной антирелигиозной газет Рав-Кунчкань краень Союзонь Потребобществань.
+* [[«Од вялее» (кулялопа)|«Од вялее»]]<ref name="ЛГ"/> (Петровск, Саратововской губерния) (1924) [эрзянь ды мокшонь кельсэ]. Эрзянь и мокшонь газет. Лиси месеценть кавксть. Орган Подотдела нацмен Петровского укома РКП(б).
+* [[«Од эрямо» (кулялопа)|«Од эрямо»]]<ref name="ЛГ"/> ([[Одсибирень ош]]) (1926 — 1929), Эрзянь сокицянь газета. Нолдыцязо Сибкрайком ВКП(б). Лисьнесь таргонть весть.
+* [[«Омбоце пятилетканть кис» (кулялопа)|«Омбоце пятилетканть кис»]]<ref name="ЛГ"/> ([[Дубинька (Тумобуе)|Дубинька]]) (1935)  (Орган Дубенского Райкома ВКП(б) и Райисполкома).
+* [[«Сталинской трибуна» (кулялопа, Шантала)|«Сталинской трибуна»]]<ref name="ЛГ"/> ([[Шантала (Кошкинань буе)|Шантала веле]]). (1937) Куйбышевской областёнь, ВКП(б)-нь Денискинань райкомонть да райисполкомонть газетаст.
+* [[«Сталинской трибуна» (кулялопа, Дубинька)|«Сталинской трибуна»]]<ref name="ЛГ"/> ([[Дубинька (Тумобуе)|Дубинька]]). (1936) Дубенкань ВЕП(б)-нь райкомонть ды райисполкомонть веете чинь газетаст.
+* [[«Сталинэнь киява» (кулялопа, Покш Килейбуе)|«Сталинэнь киява»]]<ref name="ЛГ"/> ([[Большие Березники (Покш Килейбуе)|Покш Килейбуе веле]]). (1935-1946) ВКП(Б)-нь Б.Березниковской райкомнть ды трудицянь депутатнэнь районной советэнть газетаст.
+* [[«Сталинэнь киява» (кулялопа, Игнадвеле)|«Сталинэнь киява»]]<ref name="ЛГ"/> ([[Игнадвеле (Покш Игнадбуе)|Игнадвеле]]). (1935 -1937 ) Лиси ковозонзо котоксть. Нолдыцязо ВКП(б)-нь райокомось ды райисполкомось.
+* [[«Тападо чопуда чинть» (кулялопа)|«Тападо чопуда чинть»]]<ref name="ЛГ"/> (1925) Вейке чинь покш-эрзя газет. Орган. Главполитпросвета – ВЧКЛБ.  
+* [[«Тонадодо сёрмас» (кулялопа)|«Тонадодо сёрмас»]]  Ве чинь газет. Нолдыцязо РСФСР-энь Главполитпросветэнь Всероссийской Чрезвычайной Комиссии по ликвидации неграмотности ды РСФСР-энь Наркомпросонь Центросовнацмен. 
+* [[«Тундонь видима лангось» (кулялопа)|«Тундонь видима лангось»]]<ref name="ЛГ"/> (1930)
+* [[«Ульть анок» (кулялопа)|«Ульть анок»]] (Саран ош) (1931) Эрзя-мокшонь областьсэ. Выездная редакция газеты «Будь готов». Орган крайкома ВЛКСМ и край ОНО.
+* [[«Чинь стямо» (кулялопа)|«Чинь стямо»]]<ref name="ЛГ"/> ([[Ульянонь ош|Симбирск]]) (1920) Орган подотдела национальностей оргпропаганды Симгубкома РКП.
+* Фото-газета. Лиси ковозонзо весть «Якстере тештень» марто-питневтеме. (1928).
+* [[«Эрзянь вечинь газета» (кулялопа)|«Эрзянь вечинь газета»]]<ref name="ЛГ"/> ([[Москов ош]]). (1926) Нолдыцязо ВЧКЛБ ды Совнацменэнь мокша-эрзянь отделэсь.
+* [[«Эрзянь трудицянь центрань газет» (кулялопа)|«Эрзянь трудицянь центрань газет»]]<ref name="ЛГ"/> ([[Москов ош]]) (1923 — 1931)
+* [[«Якстере вялее» (кулялопа)|«Якстере вялее»]]<ref name="ЛГ"/>  (Кузнецк ош, Саратовонь губерния). (1924) Лисе месеценьть кавксть. Орган подотдела нацмен Кузнецкого укома РКП.
+* [[«Якстере знамя» (кулялопа)|«Якстере знамя»]]<ref name="ЛГ"/> ([[Кочкур веле (Кочкурбуе)|Кочкур веле]]) (1930 -1939) ВКП(б)-нь Кочкуровань райкомонь ды трудицянь депутатнэнь райсовеэнть газетаст.
+* [[«Якстере Октябрь» (кулялопа)|«Якстере Октябрь»]]<ref name="ЛГ"/> Ве чинь газет. Орган Укома РКП. (1925)
+* [[«Якстере сокиця» (кулялопа)|«Якстере сокиця»]]<ref name="ЛГ"/> ([[Саратов ош]]) (1921-1926) Сокицянь газет. Губкомось РКП(б) и Губисполкомось.
 * [[«Якстере теште» (кулялопа)]]  («Эрьзян правда»)  (1935—2016)<ref name="РГБ"/>
 
 == Ташто журналт ==
 * [[«Изнямо» (альманах)]] (лиснесь [[якшамков]]онь [[1946 ие]]сте [[панжиков]]онь [[1956 ие]]с  «Сятко» ковставксонть таркас)
 * [[«Сурань толт» (ковставкс)]] (лиснесь 1956—1964 иетнесте «Сятко» ковставксонть таркас)
 
+
 == Ван. истяжо ==
 [[:ru:Средства_массовой_информации_России#Печатные СМИ по языкам]]
+== Сёрм. ==
+<references />
 
 
 [[Category:Эрзянь кель|Э]]
