*Empty MediaWiki Message*

--- a/Сятко_(журнал-ковставкс).mw
+++ b/Сятко_(журнал-ковставкс).mw
@@ -21,7 +21,7 @@
 *[[Вечканов, С.Е.]] (05.1958 ― 08.1959) 
 *[[Куторкин, Андрей Дмитриевич]] (09.1958 ― 06.1959) 
 *[[Мартынов, Александр К.]] (07.1959 ― 10.1963) 
-*[[Пятаев, Е.И.]] (11.1963 ― 12.1966) 
+*[[Пятаев, Емельян Иванович|Пятаев Е.И.]] (11.1963 ― 12.1966) 
 *[[Щеглов, Александр С.]] (01.1967 ― 12.1971) 
 *[[Мартынов, А.К.]] (01.1972 ― 06.1977) 
 *[[Калинкин, Иван Алексеевич|Калинкин Иван Алексеевич]] (07.1977 ― 06.1984) 
