*Empty MediaWiki Message*

--- a/Камешкирэнь_буе_(Пенза_ёнкс).mw
+++ b/Камешкирэнь_буе_(Пенза_ёнкс).mw
@@ -21,14 +21,14 @@
 
 === Эрзянь ===
 * [[Бегуч]]
-* [[Вишка Кулясова]] (Алексеевка)
-* [[Дубровки]]
-* [[Манадыш]] (Мамадыш)
-* [[Мокрый Дол]]
-* [[Кулясова]]
-* [[Од Шаткина]]
-* [[Сюмаева]] (Чумаево)
-* [[Тарасовка]]
+* [[Вишка Кулясова (Камешкир буе)|Вишка Кулясова]] (Алексеевка)
+* [[Дубровки (Камешкир буе)|Дубровки]]
+* [[Манадыш (Камешкир буе)|Манадыш]] (Мамадыш)
+* [[Мокрый Дол (Камешкир буе)|Мокрый Дол]]
+* [[Кулясова (Камешкир буе)|Кулясова]]
+* [[Од Шаткина (Камешкир буе)|Од Шаткина]]
+* [[Сюмаева (Камешкир буе)|Сюмаева]] (Чумаево)
+* [[Тарасовка (Камешкир буе)|Тарасовка]]
 
 === Мокшонь ===
 
