*Empty MediaWiki Message*

--- a/Пятаев,_Емельян_Иванович.mw
+++ b/Пятаев,_Емельян_Иванович.mw
@@ -26,7 +26,7 @@
 
 Чачсь [[1914]] [[умарьковонь 17 чи]]стэ [[Кулясова (Камешкир буе)|Кулясова]] велесэ неень [[Камешкир буе]]нь [[Пенза ёнкс]]со изыця-видицянь семиясо.
 
-Ульнесь «Сятко»/«Сурань толт» ковставксонть-журналонть прявтоксо 1963 иестэ 1967 иес.
+Ульнесь [[Сятко (журнал-ковставкс)|«Сурань толт»]] ковставксонть-журналонть прявтоксо 1963 иестэ 1967 иес.
 
 Эмиль Пятай 1938 иестэ ульнесь примазь СССР-нь Сёрмадеень Вейсэндявксов.
 
