*Empty MediaWiki Message*

--- a/Пятаев,_Емельян_Иванович.mw
+++ b/Пятаев,_Емельян_Иванович.mw
@@ -24,7 +24,7 @@
 }}
 '''Пятаевэнь Емельян''' (cёрмадей лемезэ {{Lang-myv|Эмиль Пятай}}, [[1914]] [[умарьковонь 17 чи]]  - [[1966]]) — [[Эрзянь кель|эрзянь]] кельсэ сёрмадей ды валморонь ладсий.  
 
-Чачсь [[1914]] [[умарьковонь 17 чи]]стэ [[Кулясова (Камешкир буе)|Кулясова]] велесэ неень [[Камешкир буе]]нь [[Пенза ёнкс]]со изыця-видицянь семиясо.
+Чачсь [[1914]] [[умарьковонь 17 чи]]стэ [[Кулясова (Камешкир буе)|Кулясова]] эрзянь<ref>[http://www.e-mordovia.ru/news/view/21475 Официальный сайт органов государственной власти РМ / 17 августа 2014 года исполняется 100 лет со дня рождения члена Союза писателей СССР (1938 г.), мордовского писателя Емельяна Ивановича Пятаева, который печатался под псевдонимом Эмиль Пятай{{ref-ru}}]</ref> велесэ неень [[Камешкир буе]]нь [[Пенза ёнкс]]со изыця-видицянь семиясо.
 
 Ульнесь [[Сятко (журнал-ковставкс)|«Сурань толт»]] ковставксонть-журналонть прявтоксо 1963 иестэ 1967 иес.
 
