*Empty MediaWiki Message*

--- a/Пятаев,_Емельян_Иванович.mw
+++ b/Пятаев,_Емельян_Иванович.mw
@@ -22,20 +22,29 @@
  |вальма                = 
  |википурнавкс         = 
 }}
-'''Пятаевэнь Емельян''' (cёрмадей лемезэ {{Lang-myv|Эмиль Пятай}}, [[1914]] [[умарьковонь 17 чи]]  - [[1966]]) — [[Эрзянь кель|эрзянь]] кельсэ сёрмадей ды валморонь ладсий.  
+'''Пятаевэнь Емельян''' (cёрмадей лемезэ {{Lang-myv|Эмиль Пятай}}, [[1914]] [[умарьковонь 17 чи]]  - [[1966]]) — [[Эрзянь кель|эрзянь]] кельсэ сёрмадей ды валморозей.  
 
-Чачсь [[1914]] [[умарьковонь 17 чи]]стэ [[Кулясова (Камешкир буе)|Кулясова]] эрзянь<ref>[http://www.e-mordovia.ru/news/view/21475 Официальный сайт органов государственной власти РМ / 17 августа 2014 года исполняется 100 лет со дня рождения члена Союза писателей СССР (1938 г.), мордовского писателя Емельяна Ивановича Пятаева, который печатался под псевдонимом Эмиль Пятай{{ref-ru}}]</ref> велесэ неень [[Камешкир буе]]нь [[Пенза ёнкс]]со изыця-видицянь семиясо.
+Чачсь [[1914]] [[умарьковонь 17 чи]]стэ [[Кулясова (Камешкир буе)|Кулясова]] эрзянь<ref>[http://www.e-mordovia.ru/news/view/21475 Официальный сайт органов государственной власти РМ / 17 августа 2014 года исполняется 100 лет со дня рождения члена Союза писателей СССР (1938 г.), мордовского писателя Емельяна Ивановича Пятаева, который печатался под псевдонимом Эмиль Пятай{{ref-ru}}]</ref> велесэ неень [[Камешкир буе]]нь [[Пенза ёнкс]]со изыця-видицянь семиясо. Тетязо ульнесь стадань ваныцякс. Эмиль Пятай ледстнесь: 
+{{Цитатань ушодома}}{{Lang-myv|''«Модась ульнесь аламо, кшись весенень а сатыль. Нейке лецтян, кода обедамсто миненек максыльть а покш сускомат (мерильть «порции»). Пек стака ульнесь  [[1921 ие|1921]] — [[1922 ие]]тнестэ. Модатне ды кудонть вакссо таркась кадоволь апак виде, касыль дурак [[тикше]]сэ. Минь сонзэ пурнылинек, яжилинек ды ярсынек кши бурьянонь почтсо...»''}}
+{{oq|ru|«Земли было мало, хлеба не хватало. И сейчас помню, как за обедом нам давали только небольшие куски (так называемые «порции»). Особенно сильно страдали в 1921–1922 гг. Земля и приусадебная площадь оставались незасеянными, зарастали бурьяном. Этот бурьян убирали, обмолачивали, мололи и ели хлеб из бурьяновой муки…»}}
+{{Цитатань пе}}
 
-Ульнесь [[Сятко (журнал-ковставкс)|«Сурань толт»]] ковставксонть-журналонть прявтоксо 1963 иестэ 1967 иес.
+[[1923 ие]]стэ саезь [[1926 ие]]с Эмиль прядызе васенце класст Кулясовань тонавтнема школасо, мейле тусь тонавтнеме сокиця-видицянь одломанень Камешкирэнь школас. Сонзэ прядомонзо мейле сась тиринь велев ды важодсь ловицякс-счетоводокс «Видиця» вейсхозсо, мекш мельга якицякс, агрономокс. [[1930 ие]]стэ од ломанесь совась комсомолс ды ульнесь кочказь комсомолонь пельксэнть секретарекс. Иень ютазь Емельян Иванович сась Московов, саизт важодеме корректорокс эрзянь ды мокшонь секцияв СССР-нь раскень Центриздатов. [[1932 ие]]стэ сон кармась «Молодая гвардия» раськень секторонть литературной редакторокс.   
 
-Эмиль Пятай 1938 иестэ ульнесь примазь СССР-нь Сёрмадеень Вейсэндявксов.
+Кода ледстнесь сонсь Эмиль Пятай, зярдо важодсь [[Москов]]со, вастневсь содавикс эрзянь сёрмадейтнень марто: [[Чесноков, Фёдор Маркелович|Фёдор Маркеловичень Чесноковонь]], Яковонь Пахомичень Григошинэнь, [[Моро Артур|Артуронь Матвеичень Моро]], [[Кириллов, Пётр Семёнович|Пётр Эрьке]] ды лиятнень марто. Сон ловнось ды кортниль эрьва-кодат сёрмадовкст, кармась сёрмалеме сонсь. Васенце валморонзо «Сексь» ульнесь максозь «Эрзянь коммуна» кулялопасонть [[1931 ие]]стэ [[кизэ|кизна]].
+ 
+[[1933 ие]]нь [[сундерьков]]сто Эмиль Пятай велявсь [[Мордовия]]в, ульнесь примазь [[«Ленинэнь киява» (кулялопа, Саран ош)»|«Ленинэнь киява» кулялопанть]] редакцияв [[Саран ош]]со. 1934 иестэ Московсо лись васенце валморонь пурнавксозо «Келей паксясо» ({{Lang-ru|«В широком поле»}}). [[1938 ие]]нь [[ацамков]]сто Эмиль Пятай ульнесь тердезь Якстере Армияв, службазо ютыль чугункань батальонсо. [[1939 ие]]стэ сонзэ лись «Маней валске» ({{Lang-ru|«Светлое утро»}}) валморонь пурнавкс. [[1941 ие]]стэ Эмиль Пятай прядызеть Горьковсо военно-политической училищанть. Ойнань васенце [[Чи (шкань вал)|читнестэ]] ульнесь фронтсо, васняяк ротань политветицякс, мейле важодсь «За Родину» кулялопанть редакциясо. Ойнанть прядомонзо мейле, 1945 иестэ, Сарансо лись «Морот изнямодо» ({{Lang-ru|«Песни победы»}}) валморонь пурнавксозо.
+
+Ульнесь [[Сятко (журнал-ковставкс)|«Сурань толт»]] ковставксонть-журналонть прявтоксо [[1963 ие]]стэ [[1967 ие]]с.
+
+Эмиль Пятай [[1938 ие]]стэ ульнесь примазь СССР-нь Сёрмадеень Вейсэндявксов.
 
 == Шкинеманзо ==
-* «Келей паксясо» (1934)
-* «Маней валске» валморонь пурнавкс (1939)
-* «Морот изнямодо» (1945)
-* «Валдо зорят» (1959)
-* «Сурские напевы» (рузонь кельсэ) (1961)
+* «Келей паксясо» ([[1934 ие|1934]])
+* «Маней валске» валморонь пурнавкс ([[1939 ие|1939]])
+* «Морот изнямодо» ([[1945 ие|1945]])
+* «Валдо зорят» ([[1959 ие|1959]])
+* «Сурские напевы» (рузонь кельсэ) ([[1961 ие|1961]])
 
 1963 иестэ саезь 1965 эрьва ие Саран ошсо листь «Велень эйкакшт» ({{Lang-ru|«Сельские дети»}}), «Тундонь вармат» ({{Lang-ru|«Весенний ветер»}}), «Вирьсэ» ({{Lang-ru|«В лесу»}}).
 
