*Empty MediaWiki Message*

--- a/Марезь_веле_(Чаунзабуе).mw
+++ b/Марезь_веле_(Чаунзабуе).mw
@@ -69,6 +69,9 @@
 == Содавикс ломанть те велестэнть ==
 Марезь велесэ чачсть:
 
+
+== Ванмо== 
+* [https://www.youtube.com/watch?v=JmPF3IgOt1o&list=UUBtkh2BMcNWJPX87uFhzGpQ&index=4 ГТРК «СИЯЖАР»:Покш Марезь веле (ванмо)]
 == Сёрм.: ==
 <references />
 
