*Empty MediaWiki Message*

--- a/«Эрьмезь»_(вейсэндявкс).mw
+++ b/«Эрьмезь»_(вейсэндявкс).mw
@@ -138,7 +138,7 @@
 
 == Ванмот==
 * [http://www.ntv.ru/novosti/190217/ Эрзяне вырезают портреты (ванмо) {{ref-ru}}]
-
+* [https://www.youtube.com/watch?v=_v8Hy6FrNx8&list=UUBtkh2BMcNWJPX87uFhzGpQ&index=14 ГТРК «СИЯЖАР»:ЭРЬМЕЗЬ (ванмо) {{ref-myv}}]
 
 [[Category:Эрзянь вейсэндявкс|Э]]
 [[Category:Эрзянь культурась-мазычись|Э]]
