*Empty MediaWiki Message*

--- a/Йовлань_Олонь_лемсэ_Этно-кудо.mw
+++ b/Йовлань_Олонь_лемсэ_Этно-кудо.mw
@@ -5,6 +5,9 @@
  
 
 Йовлань Олонь лемсэ Этно-кудонь прявтось: П. Рябов ([[Калаганонь Керяз]]).
+== Ванмот==
+* [https://www.youtube.com/watch?v=_v8Hy6FrNx8&list=UUBtkh2BMcNWJPX87uFhzGpQ&index=14 ГТРК «СИЯЖАР»:ЭРЬМЕЗЬ (ванмо) {{ref-myv}}]
+
 == Сёрм.: ==
 <references />
 
