--- a/Вирь_Тавла_(Кочкурбуе).mw
+++ b/Вирь_Тавла_(Кочкурбуе).mw
@@ -66,6 +66,7 @@
 
 
 ==Содавикс ломанть те велестэнть ==
+[[Image:Wood carving from Podlesnaya Tavla.JPG|thumb|left|250px|]] 
 Вирь Тавласо чачсть эрзянь артыцят ды чувтосто керсицят:
 * [[Бочкинэнь Пётр]] 
 *  [[Гаушевень Александр]]
@@ -81,8 +82,9 @@
 * Бурнайкин Иван Степанович<ref>Время и события. 2016 : библиографический указатель / М-во культуры и туризма РМ, Нац. б-ка им. А. С. Пушкина РМ ; [сост. А. Н. Маланьчева]. – Саранск, 2015. – 144 с. стр.28{{ref-ru}}</ref>— краевед, РМ-нь заслуженной шкинемань важодиця (1996), РМ-нь прявтонть казязь лауреат (2005)
 
 == Содавикс таркат ==
+[[File:Etno kudo.jpg|thumb|300px|Йовлань Олонь лемсэ «Этно-Кудо». Вирь Тавла, Кочкурбуе]]
 * [[Таштамковонь 6 чи]]стэ [[2006 ие]]стэ ульнезь панжозь [[Йовлань Олонь лемсэ Этно-кудо]].
-[[Image:Wood carving from Podlesnaya Tavla.JPG|thumb|left|250px|]] 
+
 
 == Сёрм.: ==
 <references />
