--- a/Йовлань_Оло.mw
+++ b/Йовлань_Оло.mw
@@ -3,7 +3,7 @@
  |лем                  = Йовлань Оло
  |оригинальной лем      = 
  |чачома лем         = Владимир Иванович Ромашкин
- |артовкс              = Jovlanj Olo.JPG
+ |артовкс              = Jovlanj Olo.jpg
  |артовксонть покшолмазо   = 
  |артовксонть эйсте = 
  |важодема ёрокчизе     = содавикс морыця-седиця, [[«Торама» морамо-седямо кужо]]нть пурныцязо-ветицязо. 
@@ -37,7 +37,7 @@
 {{Цитатань пе}}
 
 == Йовлань Олонь лемсэ музей ==
-[[Image:Etno kudo.JPG|thumb|left|400px|Йовлань Олонь лемсэ «Этно-Кудо»]]
+[[Image:Etno kudo.jpg|thumb|left|400px|Йовлань Олонь лемсэ «Этно-Кудо»]]
 [[2006]] иень[[Таштамковонь 6 чи]]стэ  Вирь Тавла велесэнть ульнезь панжозь [[Йовлань Олонь лемсэ «Этно-Кудо»]]<ref>Евдокимова Т. Его «Торама» звучит на весь мир. // Вперед. Атяшевского района. – 14 сентября. – С. 4. </ref>. Те кудось, конань сон рамизеть 1989 иестэ, ульнесь сонензэ оймень витнема таркакс - тезей сакшныль оймсеме стакачитнеде, саиль од вийть эсинзэ седямо-морамо тевтнене, арсиль кода седе пек сравтомонзо эрзя раськенть мазычинть.
 
 == Кулят ==
