*Empty MediaWiki Message*

--- a/Маризь_Кемаль.mw
+++ b/Маризь_Кемаль.mw
@@ -4,7 +4,7 @@
  |лем                  = Маризь Кемаль 
  |оригинальной лем      = 
  |чачома лем         = Раиса Степановна Кемайкина
- |артовкс              = Marizj Kemalj.JPG
+ |артовкс              = Маризь Кемаль.jpg
  |артовксонть покшолмазо   = 
  |артовксонть эйсте = Маризь Кемаль эрзянь оршамопельсэ. 
  |важодема ёрокчизе     = валморонь ладсий, сёрмадей
