*Empty MediaWiki Message*

--- a/Сурвеле_(Кочкурбуе).mw
+++ b/Сурвеле_(Кочкурбуе).mw
@@ -87,6 +87,9 @@
 [[1920 ие]]стэ ульнесь панжозь раськень ловнома кудо<ref name="Время и события. 2015"/>.
 [[1970 ие]]стэ ульнесь панжозь заслуженной тонавтыцянь Лавровскоень Александрань Петровнань лемсэ музей<ref name="Время и события. 2015"/>.
 
+== Ванмот==
+* [https://www.youtube.com/watch?v=jFaAHMgj6Bs&list=UUBtkh2BMcNWJPX87uFhzGpQ&index=17 ГТРК «СИЯЖАР»: МОЯ МАЛАЯ РОДИНА САБАЕВО СУРВЕЛЕ (ванмо) {{ref-myv}}]
+
 == Сёрм.: ==
 <references />
 
