*Empty MediaWiki Message*

--- a/Сятко_(журнал-ковставкс).mw
+++ b/Сятко_(журнал-ковставкс).mw
@@ -17,7 +17,7 @@
 
 Малав кеветее иеть журналось эзь лисне. 1956 ― 1964 ставкслопанть  лемезэ «[[Сурань толт (журнал-ковставкс)|Сурань толт]]» ульнесь.
 
-*[[Иркаев, Николай Л.]] (01.1956 ― 04.1958)
+*[[Иркаев, Николай Лазаревич|Иркаев Н. Л.]] (01.1956 ― 04.1958)
 *[[Вечканов, С.Е.]] (05.1958 ― 08.1959) 
 *[[Куторкин, Андрей Дмитриевич]] (09.1958 ― 06.1959) 
 *[[Мартынов, Александр К.]] (07.1959 ― 10.1963) 
