--- a/Пятаев,_Емельян_Иванович.mw
+++ b/Пятаев,_Емельян_Иванович.mw
@@ -7,7 +7,7 @@
  |артовксонть эйсте = 
  |важодема ёрокчизе     = [[Эрзянь кель|эрзянь]] кельсэ сёрмадей ды валморонь ладсий
  |чачома чись          = 17.08.1914
- |чачома тарка         = {{ЧачомаТарка|Кулясова|Кулясова (Камешкир буе)}}, {{ЧачомаТарка|Камешкир буе}}, {{ЧачомаТарка|Пенза ёнкс}}
+ |чачома тарка         = {{ЧачомаТарка|Кулясова||Кулясова (Камешкир буе)}}, {{ЧачомаТарка|Камешкир буе}}, {{ЧачомаТарка|Пенза ёнкс}}
  |гражданчи            = {{Масторкоцт|Россиянь Империя}}→ <br />{{Масторкоцт|СССР}}
  |кедьалксчи           = 
  |кулома чись          = 1966
