--- a/Вараканьбал.mw
+++ b/Вараканьбал.mw
@@ -1,4 +1,4 @@
-[[Image:Rotklee Trifolium pratense.jpg|thumb|350px|right|border|Вараканьбал]]
+[[Image:Trifolium pratense - Keila.jpg|thumb|350px|right|border|Вараканьбал]]
 '''Вараканьбал''' (лат. ''Trifolium pretense '') — кавто ды седее ламо иень перть касыця тике. Бобабнь семиянь. 
 
 Лопазо аштить [[3 (ловома вал)|колмо]] лопинестэ, вейс касозь. Вишкине цецянзо пурназь вейке шаронь кондямо пряс. Цецянзо тантейстэ качадыть, бордовой тюсонь. Вараканьбалось кассы луга лангсо эли сонзэ виднить паксяс. Сон ловови вадря кормокс ды ормадо лезэв тикшекс. Кочкить тикшенть [[якстере]] прянзо.  Теить эйстэнзэ чай, симить козомсто, экшендемстэ. Мекшетне саить  медярво.
