--- a/Иркаев,_Николай_Лазаревич.mw
+++ b/Иркаев,_Николай_Лазаревич.mw
@@ -32,7 +32,7 @@
 
 Ойнадонть мейле сёрмадовксонзо Н.Эркаень ульнесть ломаньде ды мирэнь эйстэ: «Стихт ды поэмат» ([[1952 ие|1952]]), «Тундонь сад» ([[1959 ие|1959]]), «Теплынь» ([[1965 ие|1965]]). не иетнестэ сон сёрмалесь «Литературная жизнь», «Литературная газета», «Литературная Россия», «Дружба народов» ды лия., куншкань кулялопатнень ды ковставкстнень марто. 
 
-Ульнесь «Сятко»/«Сурань толт» ковставксонть-журналонть прявтокс: 01.[[1956 ие|1956]] ― 04.[[1958 ие|1958]].
+Ульнесь [[Сятко (журнал-ковставкс)|«Сятко»/«Сурань толт»]] ковставксонть-журналонть прявтокс: 01.[[1956 ие|1956]] ― 04.[[1958 ие|1958]].
 
 Никул Эркаень повестензэ: «Алёшка» (1959), «Берёзовая вода» (1963), «Новая родня» ([[1966 ие|1966]]), «Митяевы мечтания» ([[1975 ие|1975]]), «Шураган» ([[1980 ие|1980]]). Повестесь «Алёшка» ульнесь публикувазь «Костер» пакшань ковставксо, ульнесь ютавтозь ламо СССР-нь раськетнень кельтнес. 
 
