*Empty MediaWiki Message*

--- a/Сятко_(журнал-ковставкс).mw
+++ b/Сятко_(журнал-ковставкс).mw
@@ -17,7 +17,7 @@
 
 Малав кеветее иеть журналось эзь лисне. 1956 ― 1964 ставкслопанть  лемезэ «[[Сурань толт (журнал-ковставкс)|Сурань толт]]» ульнесь.
 
-*[[Иркаев, Николай Лазаревич|Иркаев Н. Л.]] (01.1956 ― 04.1958)
+*[[Иркаев, Николай Лазаревич|Иркаев Н. Л.]] (01.1956 ― 04.1958) эли (04.1956 ― 01.1959)<ref name="Республиканская архивная служба">[http://www.sudbasoldata.ru/3409/ Республиканская архивная служба Республики Мордовия: Иркаев Николай Лазаревич (Документы) {{Ref-ru}}]]</ref>
 *[[Вечканов, С.Е.]] (05.1958 ― 08.1959) 
 *[[Куторкин, Андрей Дмитриевич]] (09.1958 ― 06.1959) 
 *[[Мартынов, Александр К.]] (07.1959 ― 10.1963) 
@@ -31,6 +31,8 @@
 
 == Сёрм.: ==
 * Сятко 2003/1
+<references />
+
 
 [[Category:Ковставкст |С]]
 [[Category:Эрзянь сёрмадоматев|С]]
