*Empty MediaWiki Message*

--- a/Иркаев,_Николай_Лазаревич.mw
+++ b/Иркаев,_Николай_Лазаревич.mw
@@ -22,9 +22,9 @@
  |вальма                = 
  |википурнавкс         = 
 }}
-'''Никул Эркай''' ({{Lang-ru|Николай Лазаревич Иркаев}}, [[1906]] [[панжиковонь 22 чи]]  - [[1978]] [[аштемковонь 15 чи]]) — [[Эрзянь кель|эрзянь]] кельсэ сёрмадей, валморозей, драматург, ютавтыця.  
+'''Никул Эркай<ref name="Библиотека МЛ">[http://www.lib.e-mordovia.ru/Library/?Char=%CD&id=1 Библиотека Мордовской литературы: Никул Эркай (Николай Лазаревич Иркаев){{Ref-ru}}]</ref>''' ({{Lang-ru|Николай Лазаревич Иркаев}}, [[1906]] [[панжиковонь 22 чи]]  - [[1978]] [[аштемковонь 15 чи]]) — [[Эрзянь кель|эрзянь]] кельсэ сёрмадей, валморозей, драматург, ютавтыця. Эрзя<ref name="inpenza">[http://inpenza.ru/people/irkayev-n-l.php inpenza.ru|ИРКАЕВ Николай Лазаревич (Никул Эркай){{Ref-ru}}]</ref>. 
 
-Чачсь [[1906]] [[панжиковонь 22 чи]]стэ [[Курилова (Рамаданбуе)|Курилова]] велесэ неень [[Рамаданбуе]]сэ  сокиця-видицянь семиясо. 1927 иестэ прядызе Пензань партиянь школанть, 1930 иестэ Весесоюзлнь коммунистэнь куляньсёрмадеень институтонть. 1933 иестэ важодлсь Мордовиянь шкинемань НИИ-сэ.
+Чачсь [[1906]] [[панжиковонь 22 чи]]стэ [[Курилова (Рамаданбуе)|Курилова]]<ref name="inpenza"/> велесэ неень [[Рамаданбуе]]сэ  сокиця-видицянь семиясо. 1927 иестэ прядызе Пензань партиянь школанть, 1930 иестэ Весесоюзлнь коммунистэнь куляньсёрмадеень институтонть. 1933 иестэ важодлсь Мордовиянь шкинемань НИИ-сэ.
 
 Литературасо шкинемазо ушодовсь XX пингень 20-сь иетнестэ. Васенце валморонь пурнавксозо «Модась окстомсь» лись [[1932 ие]]стэ [[Саран ош]]со, мейле «Корёнтнэ наксадсть»  ёвтнемань пурнавкс. 1934 иестэ важодсь «Якстере теште», «Эрзянь коммуна», «Советский артист», «Полярная кочегарка» кулялопатнесэ ды [[Сурань толт (журнал-ковставкс)|«Сурань толт»]] ковставкссо. Теке жо иестэнть ульнесь примазь СССР-нь Сёрмадеень Вейсэндявксов. 
 
@@ -32,7 +32,7 @@
 
 Ойнадонть мейле сёрмадовксонзо Н.Эркаень ульнесть ломаньде ды мирэнь эйстэ: «Стихт ды поэмат» ([[1952 ие|1952]]), «Тундонь сад» ([[1959 ие|1959]]), «Теплынь» ([[1965 ие|1965]]). не иетнестэ сон сёрмалесь «Литературная жизнь», «Литературная газета», «Литературная Россия», «Дружба народов» ды лия., куншкань кулялопатнень ды ковставкстнень марто. 
 
-Ульнесь [[Сятко (журнал-ковставкс)|«Сятко»/«Сурань толт»]] ковставксонть-журналонть прявтокс: 01.[[1956 ие|1956]] ― 04.[[1958 ие|1958]].
+Ульнесь «Сятко»/«Сурань толт» ковставксонть-журналонть прявтокс: 01.[[1956 ие|1956]] ― 04.[[1958 ие|1958]] эли (04.1956 ― 01.1959)<ref name="Республиканская архивная служба Республики Мордовия">[http://www.sudbasoldata.ru/3409/ Республиканская архивная служба Республики Мордовия: Иркаев Николай Лазаревич (Документы) {{Ref-ru}}]</ref>.
 
 Никул Эркаень повестензэ: «Алёшка» (1959), «Берёзовая вода» (1963), «Новая родня» ([[1966 ие|1966]]), «Митяевы мечтания» ([[1975 ие|1975]]), «Шураган» ([[1980 ие|1980]]). Повестесь «Алёшка» ульнесь публикувазь «Костер» пакшань ковставксо, ульнесь ютавтозь ламо СССР-нь раськетнень кельтнес. 
 
@@ -40,9 +40,10 @@
 
 Пек ламо сёрмадовксонзо, ледстнеманзо ульнесь публиковазь «Родники души» пурнавкссо, кона нолдазь ульнесь куломанзо мейле [[1981 ие]]стэ.
 
-Никул Эркай - заслуженной Мордовиянь валморозей ([[1960 ие|1960]]), заслуженной сёрмадей МАССР ([[1966 ие|1966]]), МАССР-нь Государственной премиянь лауреат ([[1975 ие|1975]]). 1934 иестэ ульнесь примазь СССР-нь Сёрмадеень Вейсэндявксов, СССР-нь Верховной Советэнь депутат ([[1970 ие|1970]]).
+Никул Эркай - заслуженной Мордовиянь валморозей ([[1960 ие|1960]]), заслуженной сёрмадей МАССР ([[1966 ие|1966]]), МАССР-нь Государственной премиянь лауреат<ref name="Кулят инфо">[http://kulyat.info/pobeda-romodanovo/9080-pisatel-poyet-grazhdanin.html ИП Кулят инфо РМ: Писатель, поэт – гражданин {{Ref-ru}}]</ref> ([[1975 ие|1975]]). 1934 иестэ ульнесь примазь СССР-нь Сёрмадеень Вейсэндявксов, СССР-нь Верховной Советэнь депутат ([[1970 ие|1970]]).
 
 Кулось  [[1978]] иень [[аштемковонь 15 чи]]стэ. Калмазь Саран ошсо.
+[[1986 ие]]стэ Никул Эркаень 80-иень чачома чистэнхэ Саран ошсо сонзэ лемсэ ульнесь лемдязь куро Светотехника микробуесэ<ref name="Туристско-информационный центр">[http://turizmrm.ru/their-names/ Туристско-информационный центр Республики Мордовия ИХ ИМЕНАМИ НАЗВАНЫ{{Ref-ru}}]</ref>, куро [[Ромоданово (Рамаданбуе)|Ромоданово]]<ref name="inpenza"/> посёлкасо.
 
 == Сёрм. ==
 <references />
