*Empty MediaWiki Message*

--- a/Иркаев,_Николай_Лазаревич.mw
+++ b/Иркаев,_Николай_Лазаревич.mw
@@ -24,11 +24,11 @@
 }}
 '''Никул Эркай<ref name="Библиотека МЛ">[http://www.lib.e-mordovia.ru/Library/?Char=%CD&id=1 Библиотека Мордовской литературы: Никул Эркай (Николай Лазаревич Иркаев){{Ref-ru}}]</ref>''' ({{Lang-ru|Николай Лазаревич Иркаев}}, [[1906]] [[панжиковонь 22 чи]]  - [[1978]] [[аштемковонь 15 чи]]) — [[Эрзянь кель|эрзянь]] кельсэ сёрмадей, валморозей, драматург, ютавтыця. Эрзя<ref name="inpenza">[http://inpenza.ru/people/irkayev-n-l.php inpenza.ru|ИРКАЕВ Николай Лазаревич (Никул Эркай){{Ref-ru}}]</ref>. 
 
-Чачсь [[1906]] [[панжиковонь 22 чи]]стэ [[Курилова (Рамаданбуе)|Курилова]]<ref name="inpenza"/> велесэ неень [[Рамаданбуе]]сэ  сокиця-видицянь семиясо. 1927 иестэ прядызе Пензань партиянь школанть, 1930 иестэ Весесоюзлнь коммунистэнь куляньсёрмадеень институтонть. 1933 иестэ важодлсь Мордовиянь шкинемань НИИ-сэ.
+Чачсь [[1906]] [[панжиковонь 22 чи]]стэ [[Курилова (Рамаданбуе)|Курилова]]<ref name="inpenza"/> велесэ неень [[Рамаданбуе]]сэ  сокиця-видицянь семиясо. [[1927 ие]]стэ прядызе Пензань партиянь школанть, [[1930 ие]]стэ Весесоюзлнь коммунистэнь куляньсёрмадеень институтонть. [[1933 ие]]стэ важодлсь Мордовиянь шкинемань НИИ-сэ.
 
-Литературасо шкинемазо ушодовсь XX пингень 20-сь иетнестэ. Васенце валморонь пурнавксозо «Модась окстомсь» лись [[1932 ие]]стэ [[Саран ош]]со, мейле «Корёнтнэ наксадсть»  ёвтнемань пурнавкс. 1934 иестэ важодсь «Якстере теште», «Эрзянь коммуна», «Советский артист», «Полярная кочегарка» кулялопатнесэ ды [[Сурань толт (журнал-ковставкс)|«Сурань толт»]] ковставкссо. Теке жо иестэнть ульнесь примазь СССР-нь Сёрмадеень Вейсэндявксов. 
+Литературасо шкинемазо ушодовсь XX пингень 20-сь иетнестэ. Васенце валморонь пурнавксозо «Модась окстомсь» лись [[1932 ие]]стэ [[Саран ош]]со, мейле «Корёнтнэ наксадсть»  ёвтнемань пурнавкс. [[1934 ие]]стэ важодсь [[«Эрзянь правда» (кулялопа)|«Якстере теште»]], «Эрзянь коммуна», «Советский артист», «Полярная кочегарка» кулялопатнесэ ды [[Сурань толт (журнал-ковставкс)|«Сурань толт»]] ковставкссо. Теке жо иестэнть ульнесь примазь СССР-нь Сёрмадеень Вейсэндявксов. 
 
-1936 иестэ  ульнесь нолдазь «Моро Ратордо» поэмась. 1930-це иетнестэ «Не рой другому яму» пьесат, ёвкст ды пакшанень ёвтнемат. Валморот ды поэмат ойнань шканть совасть «Кочказь лирика» пурнавксонтень ([[1945 ие|1945]]). 
+[[1936 ие]]стэ  ульнесь нолдазь «Моро Ратордо» поэмась. 30-це иетнестэ «Не рой другому яму» пьесат, ёвкст ды пакшанень ёвтнемат. Валморот ды поэмат ойнань шканть совасть «Кочказь лирика» пурнавксонтень ([[1945 ие|1945]]). 
 
 Ойнадонть мейле сёрмадовксонзо Н.Эркаень ульнесть ломаньде ды мирэнь эйстэ: «Стихт ды поэмат» ([[1952 ие|1952]]), «Тундонь сад» ([[1959 ие|1959]]), «Теплынь» ([[1965 ие|1965]]). не иетнестэ сон сёрмалесь «Литературная жизнь», «Литературная газета», «Литературная Россия», «Дружба народов» ды лия., куншкань кулялопатнень ды ковставкстнень марто. 
 
