*Empty MediaWiki Message*

--- a/ЛопаПарцун:Ломанесь%2Fdoc.mw
+++ b/ЛопаПарцун:Ломанесь%2Fdoc.mw
@@ -7,8 +7,8 @@
 * {{tl|Иерарх}}
 * {{tl|Кинематографист}}
 * {{tl|Космонавт}}
-* {{tl|Музыкант}}
-* {{tl|Писатель}}
+* {{tl|Седиця}}
+* {{tl|Сёрмадей}}
 * {{tl|Политик}}
 * {{tl|Святой}}
 * {{tl|Религиозный деятель}}
@@ -16,7 +16,7 @@
 * {{tl|Театральный деятель}}
 * {{tl|Учёный}}
 * {{tl|Философ}}
-* {{tl|Художник}}
+* {{tl|Артыця}}
 * {{tl|Создатель комиксов}}
 * {{tl|Литературный персонаж}}
 * {{tl|Персона Троецарствия}}
