*Empty MediaWiki Message*

--- a/Иркаев,_Николай_Лазаревич.mw
+++ b/Иркаев,_Николай_Лазаревич.mw
@@ -17,7 +17,7 @@
  |мирдезэ              = 
  |низэ                 = 
  |эйкакшонзо           = 
- |казнеть ды медальть  = 
+ |казнеть ды медальть  = Орден Трудового Красного Знамени, Орден «Знак Почёта»
  |автограф             = 
  |вальма                = 
  |википурнавкс         = 
@@ -32,7 +32,7 @@
 
 Ойнадонть мейле сёрмадовксонзо Н.Эркаень ульнесть ломаньде ды мирэнь эйстэ: «Стихт ды поэмат» ([[1952 ие|1952]]), «Тундонь сад» ([[1959 ие|1959]]), «Теплынь» ([[1965 ие|1965]]). не иетнестэ сон сёрмалесь «Литературная жизнь», «Литературная газета», «Литературная Россия», «Дружба народов» ды лия., куншкань кулялопатнень ды ковставкстнень марто. 
 
-Ульнесь «Сятко»/«Сурань толт» ковставксонть-журналонть прявтокс: 01.[[1956 ие|1956]] ― 04.[[1958 ие|1958]] эли (04.1956 ― 01.1959)<ref name="Республиканская архивная служба Республики Мордовия">[http://www.sudbasoldata.ru/3409/ Республиканская архивная служба Республики Мордовия: Иркаев Николай Лазаревич (Документы) {{Ref-ru}}]</ref>.
+Ульнесь [[Сятко (журнал-ковставкс)|«Сятко»/«Сурань толт» ковставксонть-журналонть]] прявтокс: 01.[[1956 ие|1956]] ― 04.[[1958 ие|1958]] эли (04.1956 ― 01.1959)<ref name="Республиканская архивная служба Республики Мордовия">[http://www.sudbasoldata.ru/3409/ Республиканская архивная служба Республики Мордовия: Иркаев Николай Лазаревич (Документы) {{Ref-ru}}]</ref>.
 
 Никул Эркаень повестензэ: «Алёшка» (1959), «Берёзовая вода» (1963), «Новая родня» ([[1966 ие|1966]]), «Митяевы мечтания» ([[1975 ие|1975]]), «Шураган» ([[1980 ие|1980]]). Повестесь «Алёшка» ульнесь публикувазь «Костер» пакшань ковставксо, ульнесь ютавтозь ламо СССР-нь раськетнень кельтнес. 
 
@@ -48,8 +48,8 @@
 == Сёрм. ==
 <references />
 
-[[Category:Ломанть|И]]
-[[Category:Эрзянь сёрмадейть|И]]
-[[Категория:Эрзякс кортыцят|И]]
-[[Category:Эрзянь валморонь ладсийть|И]]
-[[Category:Эрзянь Ине ломанть|И]]
+[[Category:Ломанть|Э]]
+[[Category:Эрзянь сёрмадейть|Э]]
+[[Категория:Эрзякс кортыцят|Э]]
+[[Category:Эрзянь валморонь ладсийть|Э]]
+[[Category:Эрзянь Ине ломанть|Э]]
