--- a/Иркаев,_Николай_Лазаревич.mw
+++ b/Иркаев,_Николай_Лазаревич.mw
@@ -24,7 +24,7 @@
 }}
 '''Никул Эркай<ref name="Библиотека МЛ">[http://www.lib.e-mordovia.ru/Library/?Char=%CD&id=1 Библиотека Мордовской литературы: Никул Эркай (Николай Лазаревич Иркаев){{Ref-ru}}]</ref>''' ({{Lang-ru|Николай Лазаревич Иркаев}}, [[1906]] [[панжиковонь 22 чи]]  - [[1978]] [[аштемковонь 15 чи]]) — [[Эрзянь кель|эрзянь]] кельсэ сёрмадей, валморозей, драматург, ютавтыця. Эрзя<ref name="inpenza">[http://inpenza.ru/people/irkayev-n-l.php inpenza.ru|ИРКАЕВ Николай Лазаревич (Никул Эркай){{Ref-ru}}]</ref>. 
 
-Чачсь [[1906]] [[панжиковонь 22 чи]]стэ [[Курилова (Рамаданбуе)|Курилова]]<ref name="inpenza"/> велесэ неень [[Рамаданбуе]]сэ  сокиця-видицянь семиясо. [[1927 ие]]стэ прядызе Пензань партиянь школанть, [[1930 ие]]стэ Весесоюзлнь коммунистэнь куляньсёрмадеень институтонть. [[1933 ие]]стэ важодлсь Мордовиянь шкинемань НИИ-сэ.
+Чачсь [[1906]] [[панжиковонь 22 чи]]стэ [[Курилова (Рамаданбуе)|Курилова]]<ref name="inpenza"/> эрзянь<ref name="Геопортал РГО">[http://geo13.ru/atlas/provinces/56 Геопортал РГО: ПРИРОДНОЕ И КУЛЬТУРНОЕ НАСЛЕДИЕ МУНИЦИПАЛЬНЫХ РАЙОНОВ / РОМОДАНОВСКИЙ РАЙОН{{Ref-ru}}]</ref> велесэ неень [[Рамаданбуе]]сэ  сокиця-видицянь семиясо. Теске прядсь колмо классо школанть<ref name="Кудашкина О">Кудашкина Ольга Сергеевна. Поэтика прозы Никула Эркая: диссертация ... кандидата филологических наук : 10.01.02.- Саранск, 2006.- 180 с.: ил. РГБ ОД, 61 06-10/1120 {{ref-ru}}, {{ref-myv}}</ref>. [[1927 ие]]стэ прядызе Пензань партиянь школанть, [[1930 ие]]стэ Весесоюзлнь коммунистэнь куляньсёрмадеень институтонть. [[1933 ие]]стэ важодлсь Мордовиянь шкинемань НИИ-сэ.
 
 Литературасо шкинемазо ушодовсь XX пингень 20-сь иетнестэ. Васенце валморонь пурнавксозо «Модась окстомсь» лись [[1932 ие]]стэ [[Саран ош]]со, мейле «Корёнтнэ наксадсть»  ёвтнемань пурнавкс. [[1934 ие]]стэ важодсь [[«Эрзянь правда» (кулялопа)|«Якстере теште»]], «Эрзянь коммуна», «Советский артист», «Полярная кочегарка» кулялопатнесэ ды [[Сурань толт (журнал-ковставкс)|«Сурань толт»]] ковставкссо. Теке жо иестэнть ульнесь примазь СССР-нь Сёрмадеень Вейсэндявксов. 
 
@@ -43,7 +43,8 @@
 Никул Эркай - заслуженной Мордовиянь валморозей ([[1960 ие|1960]]), заслуженной сёрмадей МАССР ([[1966 ие|1966]]), МАССР-нь Государственной премиянь лауреат<ref name="Кулят инфо">[http://kulyat.info/pobeda-romodanovo/9080-pisatel-poyet-grazhdanin.html ИП Кулят инфо РМ: Писатель, поэт – гражданин {{Ref-ru}}]</ref> ([[1975 ие|1975]]). 1934 иестэ ульнесь примазь СССР-нь Сёрмадеень Вейсэндявксов, СССР-нь Верховной Советэнь депутат ([[1970 ие|1970]]).
 
 Кулось  [[1978]] иень [[аштемковонь 15 чи]]стэ. Калмазь Саран ошсо.
-[[1986 ие]]стэ Никул Эркаень 80-иень чачома чистэнхэ Саран ошсо сонзэ лемсэ ульнесь лемдязь куро Светотехника микробуесэ<ref name="Туристско-информационный центр">[http://turizmrm.ru/their-names/ Туристско-информационный центр Республики Мордовия ИХ ИМЕНАМИ НАЗВАНЫ{{Ref-ru}}]</ref>, куро [[Ромоданово (Рамаданбуе)|Ромоданово]]<ref name="inpenza"/> посёлкасо.
+
+[[1986 ие]]стэ Никул Эркаень 80-иень чачома чистензэ Саран ошсо сонзэ лемсэ ульнесь лемдязь куро Светотехника микробуесэ<ref name="Туристско-информационный центр">[http://turizmrm.ru/their-names/ Туристско-информационный центр Республики Мордовия ИХ ИМЕНАМИ НАЗВАНЫ{{Ref-ru}}]</ref><ref name="saransk-online.info">[http://www.saransk-online.info/info/4/125.html saransk-online.info: ул.НИКУЛА ЭРКАЯ{{Ref-ru}}]</ref>, куро [[Ромоданово (Рамаданбуе)|Ромоданово]]<ref name="Кулят инфо"/> посёлкасо. 2005 иень ожоковонь 21 чистэ Ромадановань куншканьбуень ловнома кудонть икеле ульнесь панжозь валморрзеенть пельскеврунгозо (бюст)<ref name="Геопортал РГО"/>, ды ловномакудоньте максть Никула Эркаень лем<ref name="Кулят инфо"/>.
 
 == Сёрм. ==
 <references />
