*Empty MediaWiki Message*

--- a/Курилова_(Рамаданбуе).mw
+++ b/Курилова_(Рамаданбуе).mw
@@ -59,12 +59,15 @@
  |сайт                    = 
  |язык сайта              = 
 }}
-'''Курилова''' ({{Lang-ru|c. Курилово}}) — эрзянь веле<ref name="Многоликая">[http://mnogolik-mordovia.mrsu.ru/p_Kyrilovo.htm Многоликая Мордовия: Село Курилово {{Ref-ru}}]]</ref> [[Рамаданбуе]]сэ, [[Мордовия]]со.
+'''Курилова''' ({{Lang-ru|c. Курилово}}) — эрзянь веле<ref name="Многоликая">[http://mnogolik-mordovia.mrsu.ru/p_Kyrilovo.htm Многоликая Мордовия: Село Курилово {{Ref-ru}}]]</ref><ref name="Геопортал РГО">[http://geo13.ru/atlas/provinces/56 Геопортал РГО: ПРИРОДНОЕ И КУЛЬТУРНОЕ НАСЛЕДИЕ МУНИЦИПАЛЬНЫХ РАЙОНОВ / РОМОДАНОВСКИЙ РАЙОН{{Ref-ru}}]</ref> [[Рамаданбуе]]сэ, [[Мордовия]]со.
 
 Ашти [[Аморда лей]] лангсо. Лецтяви ({{Lang-ru|Списке населенных мест Пензенской губернии}}) ([[1869 ие]]) ''Старая Куриловка — 74 кудот марто Саранонь уездсэ''.
 
 == Веленть лемденть  ==
-Паряк,  ({{Lang-ru|курень «хижина, лачуга» эли «место выжига в лесу угля, поташа»}}) (Даль, 1998, II, с. 572) валтнестэ<ref name="Память, запечатленная в слове"/>.
+Паряк,  ({{Lang-ru|курень «хижина, лачуга» эли «место выжига в лесу угля, поташа»}}) (Даль, 1998, II, с. 572) валтнестэ<ref name="Память, запечатленная в слове"/>.  Кода сёрмады И. К. Инжеватов<ref name="Геопортал РГО"/>:
+{{Цитатань ушодома}} ({{Lang-myv|''«лемдязь таркаванть... покш эрьке чиресэнть, кона чирькесэ сулмазь покш пандт ды [[вирь]] марто. Веленть лангсо, [[кизэ|кизна]] шкасто пурнави сув – эрькесь  невти коштонзо ({{Lang-ru|«курится»}})...»''}}
+{{oq|ru|«названо по местности… на берегу большого озера, окруженного высокими горами и лесом. Над котловиной, где разместились селения, в летнее время часто поднимается туманная дымка – «курится» озеро. Не отрицая этого, куриловцы также полагают, что на вершинах гор во время приближения монголо-татарских племен с целью предупреждения соседей об опасности зажигались костры, которые длительное время дымились («курились»).»}}
+{{Цитатань пе}}
 
 == Содавикс ломанть те велестэнть ==
 Куриловасо чачсть:
@@ -72,7 +75,7 @@
 
 == Веленть эрямозо  ==
 Кода сёрмады [[Цыганкин, Дмитрий Васильевич|Дмитрий Цыганкин]] велесэнть улить<ref name="Память, запечатленная в слове">Цыганкин Д. В. Память, запечатленная в слове. Словарь географических названий Республики Мордовия.  Саранск, 2005. – 431 с. {{ref-ru}}, {{ref-myv}}</ref>: ''Рёва угол''; лей ''Романовка''; курот: ''Тарасынка'', ''Больноинькат'', ''Игаевка'', ''Тарасынка'';  латкот: ''Азорлей'', ''Болтин латко'', ''Азорлей''; паксят: ''Бушов угол'', ''Рёва угол ''; ''Курганлей''; ''Лишмень трямо лей''; эрьке ''Романовка''.
-
+Истя жо ули аваломанень монастырь Инешкипазонь аванть Тихвинэнь пазаванть лемсэ ({{Lang-ru|Тихвинской иконы Божией Матери}}) (1835–1894)<ref name="Геопортал РГО"/>.
 == Сёрм.: ==
 <references />
 
