*Empty MediaWiki Message*

--- a/Вирь_Тавла_(Кочкурбуе).mw
+++ b/Вирь_Тавла_(Кочкурбуе).mw
@@ -60,7 +60,7 @@
  |язык сайта              = 
 }}
 
-'''Вирь Тавла''' ({{Lang-ru|Подлесная Тавла}}) — те эрзянь веле [[Мордовия Республикась|Мордовия Республикань]] [[Кочкурбуе|Кочкурбуесэ]].
+'''Вирь Тавла''' ({{Lang-ru|Подлесная Тавла}}) — те эрзянь<ref name="ulgov">[http://ulgov.ru/news/regional/2015.06.23/39562/Правительство Ульяновской области: Первый Всероссийский фестиваль мордовского фольклора «Масторавань морот» собрал более пяти тысяч участников]{{ref-ru}}</ref> веле [[Мордовия Республикась|Мордовия Республикань]] [[Кочкурбуе|Кочкурбуесэ]].
 
 Ашти [[Тавла лей]]несе, 7 [[вайгельпе]]се буенькуншкасто. Ули Культурань Кудо, школа, ды Вирь Тавлань пакшань артшкола, важоди агрофирма «Тавла». Вирь Тавла велесь ульнесь стявтозь-путозь «Сюлгамо» туристэнь якамо кис<ref>Нехаева Н.Е. Межрегиональный этнический маршрут как инновационный туристский продукт / Н.Е. Нехаева, Е.Н. Гуркина // Инновации в науке. — 2014. — №31-2. — С.119-124. {{ref-ru}}</ref>.
 
