*Empty MediaWiki Message*

--- a/Кивать_(Кузоватонь_буе).mw
+++ b/Кивать_(Кузоватонь_буе).mw
@@ -66,7 +66,7 @@
 ==Веленть лемденть==
 ==Содавикс ломанть те велестэнть==
 ==Веленть эрямозо==
-Икеле тесэ теильть крандазт ды нурт, лембе кемть. Кивать велесь ульнесь стявтозь-путозь «Сюлгамо» туристэнь якамо кис<ref>Нехаева Н.Е. Межрегиональный этнический маршрут как инновационный туристский продукт / Н.Е. Нехаева, Е.Н. Гуркина // Инновации в науке. — 2014. — №31-2. — С.119-124. {{ref-ru}}</ref>.
+Икеле тесэ теильть крандазт ды нурт, лембе кемть. Кивать велесь ульнесь стявтозь-путозь '''«Сюлгамо»''' туристэнь якамо кис<ref>Нехаева Н.Е. Межрегиональный этнический маршрут как инновационный туристский продукт / Н.Е. Нехаева, Е.Н. Гуркина // Инновации в науке. — 2014. — №31-2. — С.119-124. {{ref-ru}}</ref>. Велесэнть чапозь-путозь '''«Эрзянь эрамо тарка»<ref name="eventsinrussia">[http://eventsinrussia.com/event/9266 eventsinrussia:Фольклорно-этнографический фестиваль традиционной мордовской культуры и декоративно-прикладного творчества «Масторавань морот» («Песни матери-земли»)]{{ref-ru}}</ref>''', косо ютавтови эрьва кизэ<ref name="russia.travel">[https://russia.travel/events/301141 Министерство культуры Российской Федерации. Федеральное агентство по туризму.| Фольклорно-этнографический фестиваль «Масторавань морот» («Песни матери-земли»)]{{ref-ru}}</ref> [[«Масторавань морот»|«Масторавань морот» фолькоронь ды шкинемань фестивалесь]]<ref name="Центр Льва Гумилёва">[http://www.gumilev-center.ru/v-ulyanovskoy-oblasti-syigrali-erzyanskuyu-svadbu/ Центр Льва Гумилёва. В Ульяновской области сыграли эрзянскую свадьбу]{{ref-ru}}</ref><ref name="«Чилисема»">[http://chilisema.ru/upload/iblock/a2b/7-15-ilovepdf-compressed.pdf «Чилисема» No7 (446) 2015: МАСТОРАВАНЬ МОРОТ]{{ref-myv}}</ref>. 
 
 == Сёрм.: ==
 <references />
